# AzureDevOpsGantt

./: .gitignore  Cargo.toml  ReadMe.md  azure_dev_ops_client.rs  control_panel.css  control_panel.js  diagram_client.js  extensions.rs  index.css  index.html  index.js  jest.config.js  main.rs  models.js  models.rs  package-lock.json  package.json  resource_scheduler.js  tsconfig.json  utility.js
.data/: configuration.template.json  context.template.json
.github/workflows/: github_pages.yaml
css/: control_panel.css  index.css
docs/: constants.js  index.css  index.html  index.js
extensions/: response_extensions.rs
js/: control_panel.js  diagram_client.js
src/: azure_dev_ops_client.js  azure_dev_ops_client.rs  constants.js  dependency_graph.js  diagram_client.js  extensions.js  index.html  index.js  index.pug  index.sass  index.scss  main.rs  models.js  models.rs  utility.js
src/css/: dropdown.css  gantt.css  index.css
src/js/: azure_dev_ops_client.js  constants.js  control_panel.js  diagram_client.js  enums.js  index.js  indexed_db_client.js
src/pug/: control_panel.pug
src/sass/: control_panel.sass  gantt.sass  globals.sass  spacing.sass
src/scss/: control_panel.scss
src/ts/: azure_dev_ops_client.ts  enums.ts  extensions.ts  interfaces.ts  mermaid_js_client.ts  mermaid_js_service.ts  settings.ts  utility.ts
src/ts/interfaces/: settings_interfaces.ts  work_item_interfaces.ts
src/ts/types/: global.d.ts
tests/: mermaid_js_client.test.ts  setup_tests.js
web/: constants.js  index.css  index.html  index.js  models.js
