[package]
name = "azure_dev_ops_gantt"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.40"
clap = { version = "4.5.36", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tokio-macros = "2.5.0"
